Fix text alignment on pdp atc button

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -45,6 +45,7 @@ a.button.bundle-product-toogle.button-2 {
 input.button.button--primary.button-bundle.style- {
   text-transform: uppercase;
   border-radius: 5px !important;
+  text-align: center;
 }
 
 .kl_reviews__carousel.kl_reviews__carousel.kl_reviews__carousel {
